--- a/PARAMS_template.ini
+++ b/PARAMS_template.ini
@@ -26,6 +26,7 @@ nu=0.0;
 Lx=256;
 Ly=256;
 inicond=gauss_blob; sinus
+number_data_fields=1;
 
 [Discretization]
 order_discretization=FD_4th_central_optimized;!"FD_2nd_central" ! "FD_4th_central_optimized"
