corrected boundary condition

--- a/PARAMS_template.ini
+++ b/PARAMS_template.ini
@@ -2,31 +2,34 @@
 ; size of the dense-image we generate before decomposing it into blocks
 size_domain=513;
 ; size of each block, should be odd (17, 33, 65 etc)
-blocksize=17;
+blocksize=513;
 ; maximum number of blocks. If not set, we allocate 4 times as many blocks
 ; as required to decompose the size_domain into blocks
 number_max_blocks=;
 ; ghost nodes for each block
 ghosts=4;
-epsilon_coarsen=1e-3;
-epsilon_refine=5e-3;
+eps_coarsen=1e-3;
+eps_refine=1e-2;
 max_treelevel=6;
 min_treelevel=1;
-order_predictor=multiresolution_4th; multiresolution_2nd
+order_predictor=multiresolution_2nd; multiresolution_4th; multiresolution_2nd
+number_data_fields=1;
+; switch for mesh adaption, 1=on, ...=off
+adapt_mesh=0;
 
 [Time]
-time_max=200;
+time_max=150;
 CFL=0.5;
-write_freq=25;
+write_freq=20;
 
 [Physics]
 equation=;
 u0=1.0 0.5;
-nu=0.0;
-Lx=256;
-Ly=256;
+nu=1e-2;
+Lx=100;
+Ly=100;
 inicond=gauss_blob; sinus
-number_data_fields=1;
+boundary=periodic;
 
 [Discretization]
 order_discretization=FD_4th_central_optimized;!"FD_2nd_central" ! "FD_4th_central_optimized"
