--- a/PARAMS_template.ini
+++ b/PARAMS_template.ini
@@ -3,7 +3,7 @@
 size_domain=513;513;
 
 ; size of each block, should be odd (17, 33, 65 etc)
-blocksize=513;513;17;65;33;129;17;
+blocksize=17;513;17;65;33;129;17;
 
 ; maximum number of blocks. If not set, we allocate 4 times as many blocks
 ; as required to decompose the size_domain into blocks
@@ -16,7 +16,7 @@ ghosts=4;
 eps=1e-3;1e-4;1e-3;
 
 ; treelevel bounds
-max_treelevel=6;
+max_treelevel=5;
 min_treelevel=1;
 
 ; order of refinement predictor
@@ -26,25 +26,34 @@ order_predictor=multiresolution_4th;multiresolution_4th; multiresolution_2nd
 number_data_fields=1;
 
 ; switch for mesh adaption, 1=on, ...=off
-adapt_mesh=0;1;
+adapt_mesh=1;
 
 [Time]
 ; calculated time
 time_max=1.7;150;
+
 ; CFL criterium
 CFL=0.5;
+
 ; write frequency for output, choose very large number for disabling output on disk
 write_freq=20e10;20
 
 [Physics]
 ; convection velocity
 u0=1.0 0.5;
+
 ; diffusion coefficient
 nu=1e-2;1e-2;
+
 ; domain size
 Lx=100;
 Ly=100;
+
 ; initial field (set additional parameters in according file in INI folder)
 inicond=gauss_blob;
+
 ; boundary condition
 boundary=periodic;
+
+[Discretization]
+order_discretization=FD_4th_central_optimized ;!"FD_2nd_central" ! "FD_4th_central_optimized" ! "test"
