--- a/PARAMS_template.ini
+++ b/PARAMS_template.ini
@@ -5,9 +5,11 @@ size_domain=513;513;
 ; size of each block, should be odd (17, 33, 65 etc)
 blocksize=17;513;17;65;33;129;17;
 
-; maximum number of blocks. If not set, we allocate 4 times as many blocks
+; maximum number of blocks (light data). If not set, we allocate 4 times as many blocks
 ; as required to decompose the size_domain into blocks
 number_max_blocks=;
+; maximum number of blocks (heavy data). default=number_max_blocks
+number_max_blocks_data=;
 
 ; ghost nodes for each block
 ghosts=4;
