--- a/PARAMS_template.ini
+++ b/PARAMS_template.ini
@@ -41,11 +41,11 @@ CFL=0.5;
 write_freq=20e10;20
 
 [Physics]
-; convection velocity
-u0=1.0 0.5;
+; convection velocity, can be different for each data field (first two values correspond to data field 1, ...)
+u0=1.0 0.5;1.0 0.5 0.0 0.0;
 
-; diffusion coefficient
-nu=1e-2;1e-2;
+; diffusion coefficient, can be different for each data field (first value correspond to data field 1, ...)
+nu=1e-2 0.0;1e-2;
 
 ; domain size
 Lx=100;
