--- a/PARAMS_template.ini
+++ b/PARAMS_template.ini
@@ -1,51 +1,52 @@
+; -------------------------------------------------------------------------------------------------
 [Blocks]
 ; size of the dense-image we generate before decomposing it into blocks
-size_domain=513;513;
+number_domain_nodes=513;
 
 ; size of each block, should be odd (17, 33, 65 etc)
-blocksize=17;513;17;65;33;129;17;
+number_block_nodes=33;
+
+; ghost nodes for each block
+number_ghost_nodes=4;
 
 ; maximum number of blocks (light data). If not set, we allocate 4 times as many blocks
 ; as required to decompose the size_domain into blocks
-number_max_blocks=;
-; maximum number of blocks (heavy data). default=number_max_blocks
-number_max_blocks_data=;
+number_light_blocks=;
 
-; ghost nodes for each block
-ghosts=4;
+; maximum number of blocks (heavy data). default=number_light_blocks
+number_heavy_blocks=;
+
+; number of datafields in heavy data array
+number_data_fields=1;
 
 ; threshold value for thresholding wavelet coefficients
-eps=1e-3;1e-4;1e-3;
+eps=1e-3;
 
 ; treelevel bounds
 max_treelevel=5;
 min_treelevel=1;
 
-; order of refinement predictor
-order_predictor=multiresolution_4th;multiresolution_4th; multiresolution_2nd
-
-; number of datafields (scalar, vector etc)
-number_data_fields=1;
-
 ; switch for mesh adaption, 1=on, ...=off
 adapt_mesh=1;
 
+; -------------------------------------------------------------------------------------------------
 [Time]
 ; calculated time
-time_max=1.7;150;
+time_max=1;
 
 ; CFL criterium
 CFL=0.5;
 
 ; write frequency for output, choose very large number for disabling output on disk
-write_freq=20e10;20
+write_freq=20;
 
+; -------------------------------------------------------------------------------------------------
 [Physics]
 ; convection velocity, can be different for each data field (first two values correspond to data field 1, ...)
-u0=1.0 0.5;1.0 0.5 0.0 0.0;
+u0=1.0 0.0 -1.0 0.0;
 
 ; diffusion coefficient, can be different for each data field (first value correspond to data field 1, ...)
-nu=1e-2 0.0;1e-2;
+nu=1e-2 1e-4;
 
 ; domain size
 Lx=100;
@@ -54,8 +55,11 @@ Ly=100;
 ; initial field (set additional parameters in according file in INI folder)
 inicond=gauss_blob;
 
-; boundary condition
-boundary=periodic;
-
 [Discretization]
-order_discretization=FD_4th_central_optimized ;!"FD_2nd_central" ! "FD_4th_central_optimized" ! "test"
+order_discretization=FD_4th_central_optimized ; [ FD_2nd_central | FD_4th_central_optimized ]
+
+; order of refinement predictor
+order_predictor=multiresolution_4th; [ multiresolution_4th | multiresolution_2nd ]
+
+; boundary condition
+boundary=periodic; [ periodic ]
