--- a/PARAMS_template.ini
+++ b/PARAMS_template.ini
@@ -9,15 +9,11 @@ number_block_nodes=33;
 ; ghost nodes for each block
 number_ghost_nodes=4;
 
-; maximum number of blocks (light data). If not set, we allocate 4 times as many blocks
-; as required to decompose the size_domain into blocks
-number_light_blocks=;
-
-; maximum number of blocks (heavy data). default=number_light_blocks
-number_heavy_blocks=;
+; maximum number of blocks (heavy data) per proc
+number_blocks=256;
 
 ; number of datafields in heavy data array
-number_data_fields=1;
+number_data_fields=2;
 
 ; threshold value for thresholding wavelet coefficients
 eps=1e-3;
@@ -32,7 +28,7 @@ adapt_mesh=1;
 ; -------------------------------------------------------------------------------------------------
 [Time]
 ; calculated time
-time_max=1;
+time_max=20.0;
 
 ; CFL criterium
 CFL=0.5;
@@ -49,12 +45,13 @@ u0=1.0 0.0 -1.0 0.0;
 nu=1e-2 1e-4;
 
 ; domain size
-Lx=100;
-Ly=100;
+Lx=100.0;
+Ly=100.0;
 
 ; initial field (set additional parameters in according file in INI folder)
-inicond=gauss_blob;
+initial_cond=gauss_blob;
 
+; -------------------------------------------------------------------------------------------------
 [Discretization]
 order_discretization=FD_4th_central_optimized ; [ FD_2nd_central | FD_4th_central_optimized ]
 
@@ -62,4 +59,4 @@ order_discretization=FD_4th_central_optimized ; [ FD_2nd_central | FD_4th_centra
 order_predictor=multiresolution_4th; [ multiresolution_4th | multiresolution_2nd ]
 
 ; boundary condition
-boundary=periodic; [ periodic ]
+boundary_cond=periodic; [ periodic ]
