--- a/PARAMS_template.ini
+++ b/PARAMS_template.ini
@@ -25,6 +25,12 @@ min_treelevel=1;
 ; switch for mesh adaption, 1=on, ...=off
 adapt_mesh=1;
 
+; block distribution for balancing (also used for start distribution)
+; [equal | sfc1]
+; equal -> simple uniformly distribution
+; sfc1  -> space filling curve
+block_dist=equal;
+
 ; -------------------------------------------------------------------------------------------------
 [Time]
 ; calculated time
