--- a/PARAMS_template.ini
+++ b/PARAMS_template.ini
@@ -66,3 +66,8 @@ order_predictor=multiresolution_4th; [ multiresolution_4th | multiresolution_2nd
 
 ; boundary condition
 boundary_cond=periodic; [ periodic ]
+
+; -------------------------------------------------------------------------------------------------
+[Debug]
+; 1 ... debuging for time measurements and testcases are active,  
+debug=1;
