--- a/PARAMS_template.ini
+++ b/PARAMS_template.ini
@@ -26,9 +26,9 @@ min_treelevel=1;
 adapt_mesh=1;
 
 ; block distribution for balancing (also used for start distribution)
-; [equal | sfc1]
+; [equal | sfc_z]
 ; equal -> simple uniformly distribution
-; sfc1  -> space filling curve
+; sfc_z  -> space filling curve -> z-curve
 block_dist=equal;
 
 ; -------------------------------------------------------------------------------------------------
