--- a/PARAMS_template.ini
+++ b/PARAMS_template.ini
@@ -1,22 +1,22 @@
-; -------------------------------------------------------------------------------------------------
+; ################################################################################################
 [Blocks]
 ; size of the dense-image we generate before decomposing it into blocks
 number_domain_nodes=513;
 
 ; size of each block, should be odd (17, 33, 65 etc)
-number_block_nodes=17;
+number_block_nodes=17;65;129;17;33;
 
 ; ghost nodes for each block
 number_ghost_nodes=4;
 
 ; maximum number of blocks (heavy data) per proc
-number_blocks=513;
+number_blocks=1025;
 
 ; number of datafields in heavy data array
-number_data_fields=1;
+number_data_fields=1;2;
 
 ; threshold value for thresholding wavelet coefficients
-eps=1e-4;
+eps=1e-3;1e-4;
 
 ; treelevel bounds
 max_treelevel=5;
@@ -29,45 +29,78 @@ adapt_mesh=1;
 ; [equal | sfc_z]
 ; equal -> simple uniformly distribution
 ; sfc_z  -> space filling curve -> z-curve
-block_dist=equal;
+block_dist=sfc_z;
 
-; -------------------------------------------------------------------------------------------------
+; ################################################################################################
 [Time]
 ; calculated time
-time_max=20.0;
+time_max=50.0;60.0;
 
 ; CFL criterium
 CFL=0.5;
 
 ; write frequency for output, choose very large number for disabling output on disk
-write_freq=20;
+write_freq=10;
 
-; -------------------------------------------------------------------------------------------------
+; ################################################################################################
 [Physics]
+; type of RHS
+; note: reading of other physics parameter depends on RHS init subroutine
+; if parameter is not given: default value will be 0 or 1
+; 2D_convection_diffusion -> scalar equation, need: u0, nu
+; 2D_navier_stokes -> variables: rho, ux, uy
+;                  -> parameter: 
+physics_type=2D_convection_diffusion
+
+; ------------------------------------------------------------------------------------------------
+; parameter for 2D_convection_diffusion
 ; convection velocity, can be different for each data field (first two values correspond to data field 1, ...)
-u0=1.0 0.0 -1.0 0.0;
+u0=1.0 0.5; -1.0 0.0;
 
 ; diffusion coefficient, can be different for each data field (first value correspond to data field 1, ...)
-nu=1e-2 1e-4;
+nu=1e-2; 1e-2;
+
+; domain size
+Lx=100.0;
+Ly=100.0;
+; ------------------------------------------------------------------------------------------------
+; parameter for 2D_navier_stokes
+
+; adiabatic coefficient
+gamma_=1.4;
+
+; specific gas constant
+Rs=307.9430;
+
+; prandtl number
+Pr=0.71;
+
+; dynamic viscosity
+mu0=1e-2;
+
+; dissipation, 1=on, ...=off
+dissipation=1;
 
 ; domain size
 Lx=100.0;
 Ly=100.0;
 
+; ------------------------------------------------------------------------------------------------
 ; initial field (set additional parameters in according file in INI folder)
 initial_cond=gauss_blob;
 
-; -------------------------------------------------------------------------------------------------
+; ################################################################################################
 [Discretization]
-order_discretization=FD_4th_central_optimized ; [ FD_2nd_central | FD_4th_central_optimized ]
+; order of derivative [ FD_2nd_central | FD_4th_central_optimized ]
+order_discretization=FD_4th_central_optimized ; 
 
-; order of refinement predictor
-order_predictor=multiresolution_4th; [ multiresolution_4th | multiresolution_2nd ]
+; order of refinement predictor [ multiresolution_4th | multiresolution_2nd ]
+order_predictor=multiresolution_4th; 
 
-; boundary condition
-boundary_cond=periodic; [ periodic ]
+; boundary condition [ periodic ]
+boundary_cond=periodic; 
 
-; -------------------------------------------------------------------------------------------------
+; ################################################################################################
 [Debug]
 ; 1 ... debuging for time measurements and testcases are active,  
 debug=1;
