--- a/PARAMS_template.ini
+++ b/PARAMS_template.ini
@@ -4,22 +4,22 @@
 number_domain_nodes=513;
 
 ; size of each block, should be odd (17, 33, 65 etc)
-number_block_nodes=17;65;129;17;33;
+number_block_nodes=33;17;65;129;17;33;
 
 ; ghost nodes for each block
 number_ghost_nodes=4;
 
 ; maximum number of blocks (heavy data) per proc
-number_blocks=1025;
+number_blocks=300;1025;
 
 ; number of datafields in heavy data array
-number_data_fields=1;2;
+number_data_fields=4;2;
 
 ; threshold value for thresholding wavelet coefficients
-eps=1e-3;1e-4;
+eps=1e-4;1e-4;
 
 ; treelevel bounds
-max_treelevel=5;
+max_treelevel=4;
 min_treelevel=1;
 
 ; switch for mesh adaption, 1=on, ...=off
@@ -34,7 +34,7 @@ block_dist=sfc_z;
 ; ################################################################################################
 [Time]
 ; calculated time
-time_max=50.0;60.0;
+time_max=0.001;60.0;
 
 ; CFL criterium
 CFL=0.5;
@@ -50,7 +50,7 @@ write_freq=10;
 ; 2D_convection_diffusion -> scalar equation, need: u0, nu
 ; 2D_navier_stokes -> variables: rho, ux, uy
 ;                  -> parameter: 
-physics_type=2D_convection_diffusion
+physics_type=2D_navier_stokes;
 
 ; ------------------------------------------------------------------------------------------------
 ; parameter for 2D_convection_diffusion
@@ -60,9 +60,9 @@ u0=1.0 0.5; -1.0 0.0;
 ; diffusion coefficient, can be different for each data field (first value correspond to data field 1, ...)
 nu=1e-2; 1e-2;
 
-; domain size
-Lx=100.0;
-Ly=100.0;
+; variable names, note: number of names should be equal to number of datafields
+names=phi;
+
 ; ------------------------------------------------------------------------------------------------
 ; parameter for 2D_navier_stokes
 
@@ -81,9 +81,13 @@ mu0=1e-2;
 ; dissipation, 1=on, ...=off
 dissipation=1;
 
+; variable names, note: number of names should be equal to number of datafields
+names_ns=rho Ux Uy p;
+
+; ------------------------------------------------------------------------------------------------
 ; domain size
-Lx=100.0;
-Ly=100.0;
+Lx=1.0;10.0;
+Ly=1.0;10.0;
 
 ; ------------------------------------------------------------------------------------------------
 ; initial field (set additional parameters in according file in INI folder)
