--- a/PARAMS_template.ini
+++ b/PARAMS_template.ini
@@ -1,25 +1,25 @@
 ; ################################################################################################
 [Blocks]
 ; size of the dense-image we generate before decomposing it into blocks
-number_domain_nodes=513;
+number_domain_nodes=129;513;
 
 ; size of each block, should be odd (17, 33, 65 etc)
-number_block_nodes=33;17;65;129;17;33;
+number_block_nodes=33;129;17;33;
 
 ; ghost nodes for each block
 number_ghost_nodes=4;
 
 ; maximum number of blocks (heavy data) per proc
-number_blocks=300;1025;
+number_blocks=1050;
 
 ; number of datafields in heavy data array
 number_data_fields=4;2;
 
 ; threshold value for thresholding wavelet coefficients
-eps=1e-4;1e-4;
+eps=1e-2;1e-4;
 
 ; treelevel bounds
-max_treelevel=4;
+max_treelevel=5;
 min_treelevel=1;
 
 ; switch for mesh adaption, 1=on, ...=off
@@ -29,7 +29,7 @@ adapt_mesh=1;
 ; [equal | sfc_z]
 ; equal -> simple uniformly distribution
 ; sfc_z  -> space filling curve -> z-curve
-block_dist=sfc_z;
+block_dist=equal;
 
 ; ################################################################################################
 [Time]
@@ -91,7 +91,8 @@ Ly=1.0;10.0;
 
 ; ------------------------------------------------------------------------------------------------
 ; initial field (set additional parameters in according file in INI folder)
-initial_cond=gauss_blob;
+; [gauss_blob | vorticity_filaments]
+initial_cond=vorticity_filaments;
 
 ; ################################################################################################
 [Discretization]
