--- a/PARAMS_template.ini
+++ b/PARAMS_template.ini
@@ -106,6 +106,11 @@ order_predictor=multiresolution_4th;
 boundary_cond=periodic; 
 
 ; ################################################################################################
+[MPI]
+; method for data exchange [ RMA_lock_unlock_get | RMA_lock_unlock_put | Non_blocking_Isend_Irecv ]
+mpi_data_exchange=Non_blocking_Isend_Irecv ; 
+
+; ################################################################################################
 [Debug]
 ; 1 ... debuging for time measurements and testcases are active,  
 debug=1;
