--- a/PARAMS_template.ini
+++ b/PARAMS_template.ini
@@ -26,9 +26,10 @@ min_treelevel=1;
 adapt_mesh=1;
 
 ; block distribution for balancing (also used for start distribution)
-; [equal | sfc_z]
+; [equal | sfc_z | sfc_hilbert]
 ; equal -> simple uniformly distribution
 ; sfc_z  -> space filling curve -> z-curve
+; sfc_hilbert -> hilbert space filling curve
 block_dist=equal;
 
 ; ################################################################################################
