--- a/PARAMS_template.ini
+++ b/PARAMS_template.ini
@@ -113,5 +113,5 @@ mpi_data_exchange=Non_blocking_Isend_Irecv ;
 
 ; ################################################################################################
 [Debug]
-; 1 ... debuging for time measurements and testcases are active,  
+; 1 ... debuging for time measurements and testcases is active,  
 debug=1;
