--- a/PARAMS_template.ini
+++ b/PARAMS_template.ini
@@ -93,7 +93,7 @@ Lz=1.0;10.0;
 
 ; ------------------------------------------------------------------------------------------------
 ; initial field (set additional parameters in according file in INI folder)
-; [gauss_blob | vorticity_filaments]
+; [gauss_blob | vorticity_filaments | richtmyer_meshkov | shear_layer]
 initial_cond=vorticity_filaments;
 
 ; ################################################################################################
