--- a/PARAMS_template.ini
+++ b/PARAMS_template.ini
@@ -107,6 +107,12 @@ order_predictor=multiresolution_4th;
 ; boundary condition [ periodic ]
 boundary_cond=periodic; 
 
+; filter type [explicit_5pt | explicit_7pt | explicit_9pt | explicit_11pt]
+filter_type=explicit_9pt;
+
+; filter frequency (note: set to very high value to dissable filtering
+filter_freq=10;
+
 ; ################################################################################################
 [MPI]
 ; method for data exchange [ RMA_lock_unlock_get | RMA_lock_unlock_put | Non_blocking_Isend_Irecv ]
