--- a/PARAMS_template.ini
+++ b/PARAMS_template.ini
@@ -32,6 +32,10 @@ adapt_mesh=1;
 ; sfc_hilbert -> hilbert space filling curve
 block_dist=equal;
 
+; non uniform mesh correction: if 1 then wabbit synchronize redundant nodes 
+; at coarse blocks with data from fine blocks [ 1 | ... ]
+non_uniform_mesh=0;
+
 ; ################################################################################################
 [Time]
 ; calculated time
