--- a/PARAMS_template.ini
+++ b/PARAMS_template.ini
@@ -34,7 +34,7 @@ block_dist=equal;
 
 ; non uniform mesh correction: if 1 then wabbit synchronize redundant nodes 
 ; at coarse blocks with data from fine blocks [ 1 | ... ]
-non_uniform_mesh=0;
+non_uniform_mesh_correction=0;
 
 ; ################################################################################################
 [Time]
