--- a/PARAMS_template.ini
+++ b/PARAMS_template.ini
@@ -60,11 +60,15 @@ dt=0.000001;
 ; if parameter is not given: default value will be 0 or 1
 ; 2D_convection_diffusion -> scalar equation, need: u0, nu
 ; 2D_navier_stokes -> variables: rho, ux, uy
-;                  -> parameter: 
+;                  -> parameter: Rs, Cv, Cp, Pr, mu0
+; 3D_convection_diffusion -> scalar equation, need: u0, nu
+; 3D_navier_stokes -> variables: rho, ux, uy, uz
+;                  -> parameter: Rs, Cv, Cp, Pr, mu0
+; 2D_advection     -> scalar equation, no parameter needed
 physics_type=2D_navier_stokes;
 
 ; ------------------------------------------------------------------------------------------------
-; parameter for 2D_convection_diffusion
+; parameter for [2D/3D]_convection_diffusion
 ; convection velocity, can be different for each data field (first two values correspond to data field 1, ...)
 u0=1.0 0.5; -1.0 0.0;
 
@@ -75,7 +79,12 @@ nu=1e-2; 1e-2;
 names=phi;
 
 ; ------------------------------------------------------------------------------------------------
-; parameter for 2D_navier_stokes
+; parameter for 2D_advection
+; variable names, note: number of names should be equal to number of datafields
+names=phi;
+
+; ------------------------------------------------------------------------------------------------
+; parameter for [2D/3D]_navier_stokes
 
 ; adiabatic coefficient
 gamma_=1.4;
