finnish work on rewriting coarse_mesh also for 3D case

--- a/PARAMS_template.ini
+++ b/PARAMS_template.ini
@@ -48,7 +48,7 @@ CFL=0.5;
 write_freq=10;
 
 ; method to calculate time step [ CFL_cond | fixed ]
-time_step_calc=CFL_cond
+time_step_calc=CFL_cond;
 
 ; fixed time step
 dt=0.000001;
