new time stepper routine, works for any explicit Runge Kutta method. images for documentation in .svg format

--- a/PARAMS_template.ini
+++ b/PARAMS_template.ini
@@ -53,6 +53,15 @@ time_step_calc=CFL_cond;
 ; fixed time step
 dt=0.000001;
 
+; butcher_tableau
+; use your butcher_tableau for the Runge Kutta time step function
+; e.g. RK4:
+; butcher_tableau=(/ 0.0 0.0 0.0 0.0 0.0
+; 0.5 0.5 0.0 0.0 0.0
+; 0.5 0.0 0.5 0.0 0.0
+; 1.0 0.0 0.0 1.0 0.0
+; 0.0 0.16666666666666666 0.33333333333333331 0.33333333333333331  0.16666666666666666 /)
+
 ; ################################################################################################
 [Physics]
 ; type of RHS
