add flags for unit tests,  add width for initial condition, clean up (MPI rank from params%rank)

--- a/PARAMS_template.ini
+++ b/PARAMS_template.ini
@@ -124,6 +124,9 @@ Lz=1.0;10.0;
 ; [gauss_blob | vorticity_filaments | richtmyer_meshkov | shear_layer]
 initial_cond=vorticity_filaments;
 
+; width of initial field (depends on Lx, Ly)
+inicond_width=1e-2;(for 2D Gauss blob), 20.0_rk (for inicond sphere)
+
 ; ################################################################################################
 [Discretization]
 ; order of derivative [ FD_2nd_central | FD_4th_central_optimized ]
@@ -150,3 +153,10 @@ mpi_data_exchange=Non_blocking_Isend_Irecv ;
 [Debug]
 ; 1 ... debuging for time measurements and testcases is active,  
 debug=1;
+
+; unit tests
+test_time_stepper=0;
+test_spatial=0;
+test_wavelet_comp=0;
+test_ghost_nodes_sync=0;
+test_treecode=0;
