--- a/PARAMS_template.ini
+++ b/PARAMS_template.ini
@@ -138,7 +138,7 @@ order_predictor=multiresolution_4th;
 ; boundary condition [ periodic ]
 boundary_cond=periodic; 
 
-; filter type [no_filter | explicit_5pt | explicit_7pt | explicit_9pt | explicit_11pt]
+; filter type [no_filter | explicit_5pt | explicit_7pt | explicit_9pt | explicit_11pt | wavelet]
 filter_type=no_filter;
 
 ; filter frequency (note: set to very high value to dissable filtering
