--- a/PARAMS_template.ini
+++ b/PARAMS_template.ini
@@ -121,7 +121,7 @@ Lz=1.0;10.0;
 
 ; ------------------------------------------------------------------------------------------------
 ; initial field (set additional parameters in according file in INI folder)
-; [gauss_blob | vorticity_filaments | richtmyer_meshkov | shear_layer]
+; [gauss_blob | vorticity_filaments | richtmyer_meshkov | shear_layer | ns_pressure_blob]
 initial_cond=vorticity_filaments;
 
 ; width of initial field (depends on Lx, Ly)
