--- a/PARAMS_template.ini
+++ b/PARAMS_template.ini
@@ -125,7 +125,7 @@ Lz=1.0;10.0;
 initial_cond=vorticity_filaments;
 
 ; width of initial field (depends on Lx, Ly)
-inicond_width=1e-2;(for 2D Gauss blob), 20.0_rk (for inicond sphere)
+inicond_width=1e-2;(for 2D Gauss blob, shear layer), 20.0_rk (for inicond sphere)
 
 ; ################################################################################################
 [Discretization]
