--- a/PARAMS_template.ini
+++ b/PARAMS_template.ini
@@ -47,7 +47,7 @@ CFL=0.5;
 ; write frequency for output, choose very large number for disabling output on disk
 write_freq=10;
 
-; method to calculate time step [ CFL_cond | fixed ]
+; method to calculate time step [ fixed | CFL_cond | lvl_fixed ]
 time_step_calc=CFL_cond;
 
 ; fixed time step
