continue with 3D acm, fix mistake in write vorticity for 2D navier stokes

--- a/PARAMS_template.ini
+++ b/PARAMS_template.ini
@@ -114,6 +114,18 @@ dissipation=1;
 names_ns=rho Ux Uy p;
 
 ; ------------------------------------------------------------------------------------------------
+; parameter for [2D/3D]_acm
+
+; variable names, note: number of names should be equal to number of datafields
+names_acm=Ux Uy Uz p;
+
+c_0=50.0;
+
+nu=0.0015;
+
+gamma_p=1.0;
+
+; ------------------------------------------------------------------------------------------------
 ; domain size
 Lx=1.0;10.0;
 Ly=1.0;10.0;
@@ -143,6 +155,18 @@ filter_type=no_filter;
 
 ; filter frequency (note: set to very high value to dissable filtering
 filter_freq=10;
+
+; ################################################################################################
+[VPM]
+
+; flag for penalization
+penalization=1;
+
+; smooth mask for penalization term
+smooth_mask=1;
+
+; penalization factor
+eps_penal=0.0001;
 
 ; ################################################################################################
 [MPI]
