--- a/PARAMS_template.ini
+++ b/PARAMS_template.ini
@@ -44,8 +44,14 @@ time_max=0.001;60.0;
 ; CFL criterium
 CFL=0.5;
 
+; write method (write with fixed frequency or time ) [ fixed_freq | fixed_time ]
+write_method=fixed_time;
+
 ; write frequency for output, choose very large number for disabling output on disk
-write_freq=10;
+write_freq=200;
+
+; write time for output
+write_time=0.1;
 
 ; method to calculate time step [ fixed | CFL_cond | lvl_fixed ]
 time_step_calc=CFL_cond;
