--- a/PARAMS_template.ini
+++ b/PARAMS_template.ini
@@ -133,12 +133,14 @@ Lz=1.0;10.0;
 
 ; ------------------------------------------------------------------------------------------------
 ; initial field (set additional parameters in according file in INI folder)
-; [gauss_blob | vorticity_filaments | richtmyer_meshkov | shear_layer | ns_pressure_blob]
+; [gauss_blob | vorticity_filaments | richtmyer_meshkov | shear_layer | ns_pressure_blob | read_from_files]
 initial_cond=vorticity_filaments;
 
 ; width of initial field (depends on Lx, Ly)
 inicond_width=1e-2;(for 2D Gauss blob, shear layer), 20.0_rk (for inicond sphere)
 
+; input files that contain treecode, time, iteration, number of blocks and initial field
+input_files=phi_000000000000.h5;
 ; ################################################################################################
 [Discretization]
 ; order of derivative [ FD_2nd_central | FD_4th_central_optimized ]
