--- a/PARAMS_template.ini
+++ b/PARAMS_template.ini
@@ -125,11 +125,17 @@ names_ns=rho Ux Uy p;
 ; variable names, note: number of names should be equal to number of datafields
 names_acm=Ux Uy Uz p;
 
+; speed of sound for acm
 c_0=50.0;
 
+; inverse of Re
 nu=0.0015;
 
+
 gamma_p=1.0;
+
+; want to add a forcing term?
+forcing=1;
 
 ; ------------------------------------------------------------------------------------------------
 ; domain size
@@ -142,7 +148,7 @@ Lz=1.0;10.0;
 ; [gauss_blob | vorticity_filaments | richtmyer_meshkov | shear_layer | ns_pressure_blob | read_from_files]
 initial_cond=vorticity_filaments;
 
-; width of initial field (depends on Lx, Ly)
+; width of initial field (depends on Lx, Ly) or parameter for geometry for VPM (e.g. radius of a cylinder)
 inicond_width=1e-2;(for 2D Gauss blob, shear layer), 20.0_rk (for inicond sphere)
 
 ; input files that contain treecode, time, iteration, number of blocks and initial field
@@ -178,6 +184,9 @@ smooth_mask=1;
 
 ; penalization factor
 eps_penal=0.0001;
+
+; geometry
+geometry=cylinder;
 
 ; ################################################################################################
 [MPI]
