fix bug in volume_integral, rename eps_penal to c_eta, change compute_forcing

--- a/PARAMS_template.ini
+++ b/PARAMS_template.ini
@@ -137,6 +137,12 @@ gamma_p=1.0;
 ; want to add a forcing term?
 forcing=1;
 
+; want to add a sponge term?
+sponge_layer=0;
+
+; parameter for sponge layer
+alpha=100.0;
+
 ; ------------------------------------------------------------------------------------------------
 ; domain size
 Lx=1.0;10.0;
@@ -183,7 +189,7 @@ penalization=1;
 smooth_mask=1;
 
 ; penalization factor
-eps_penal=0.0001;
+c_eta=0.0001;
 
 ; geometry
 geometry=cylinder;
