--- a/PARAMS_template.ini
+++ b/PARAMS_template.ini
@@ -1,61 +1,81 @@
-; ################################################################################################
+[Dimensionality]
+dim=2;
+
+
 [Blocks]
-; size of the dense-image we generate before decomposing it into blocks
-number_domain_nodes=129;513;
-
 ; size of each block, should be odd (17, 33, 65 etc)
-number_block_nodes=33;129;17;33;
-
+number_block_nodes=17;129;17;33;
 ; ghost nodes for each block
 number_ghost_nodes=4;
-
-; maximum number of blocks (heavy data) per proc
-number_blocks=1050;
-
 ; number of datafields in heavy data array
-number_data_fields=4;2;
-
+number_data_fields=3;
 ; threshold value for thresholding wavelet coefficients
 eps=1e-2;1e-4;
-
 ; treelevel bounds
-max_treelevel=5;
+max_treelevel=4;
 min_treelevel=1;
-
 ; switch for mesh adaption, 1=on, ...=off
 adapt_mesh=1;
-
 ; block distribution for balancing (also used for start distribution)
 ; [equal | sfc_z | sfc_hilbert]
 ; equal -> simple uniformly distribution
 ; sfc_z  -> space filling curve -> z-curve
 ; sfc_hilbert -> hilbert space filling curve
-block_dist=equal;
-
+block_dist=sfc_hilbert;
 ; non uniform mesh correction: if 1 then wabbit synchronize redundant nodes
 ; at coarse blocks with data from fine blocks [ 1 | ... ]
-non_uniform_mesh_correction=0;
+non_uniform_mesh_correction=1;
 
-; ################################################################################################
+[DomainSize]
+Lx=4;
+Ly=4;
+Lz=4;
+
+
+[Saving]
+field_names=ux uy p vor mask;
+N_fields_saved=5;
+
+
+[ACM-new]
+c_0=50.0;
+nu=1e-2;
+gamma_p=1;
+forcing=1;
+discretization=FD_4th_central_optimized;
+inicond=meanflow;
+x_cntr=2 2 0;
+R_cyl=0.5;
+
+[ConvectionDiffusion]
+; how many scalar fields do you want to solve?
+N_scalars=1;
+; note you need to specify one value per scalar field:
+nu=1.0e-3;
+u0x=1.0;
+u0y=0.0;
+u0z=0.0;
+inicond=blob;
+blob_width=0.1;
+
+
 [Time]
-; calculated time
-time_max=0.001;60.0;
+; final time to reach in simulation
+time_max=1;
+; number of time steps performed. if not set, default value is very large
+nt=;
 
 ; CFL criterium
-CFL=0.5;
+CFL=1.0;
 
 ; write method (write with fixed frequency or time ) [ fixed_freq | fixed_time ]
 write_method=fixed_time;
-
 ; write frequency for output, choose very large number for disabling output on disk
-write_freq=200;
-
+write_freq=50;
 ; write time for output
-write_time=0.1;
-
+write_time=0.01;
 ; method to calculate time step [ fixed | CFL_cond | lvl_fixed ]
 time_step_calc=CFL_cond;
-
 ; fixed time step
 dt=0.000001;
 
@@ -68,7 +88,7 @@ dt=0.000001;
 ; 1.0 0.0 0.0 1.0 0.0
 ; 0.0 0.16666666666666666 0.33333333333333331 0.33333333333333331  0.16666666666666666 /)
 
-; ################################################################################################
+
 [Physics]
 ; type of RHS
 ; note: reading of other physics parameter depends on RHS init subroutine
@@ -80,83 +100,47 @@ dt=0.000001;
 ; 3D_navier_stokes -> variables: rho, ux, uy, uz
 ;                  -> parameter: Rs, Cv, Cp, Pr, mu0
 ; 2D_advection     -> scalar equation, no parameter needed
-physics_type=2D_navier_stokes;
+physics_type=ACM-new;
 
 ; ------------------------------------------------------------------------------------------------
 ; parameter for [2D/3D]_convection_diffusion
 ; convection velocity, can be different for each data field (first two values correspond to data field 1, ...)
-u0=1.0 0.5; -1.0 0.0;
+u0=1.0 0.0; -1.0 0.0;
 
 ; diffusion coefficient, can be different for each data field (first value correspond to data field 1, ...)
-nu=1e-2; 1e-2;
+nu=1e-4; 1e-2;
 
 ; variable names, note: number of names should be equal to number of datafields
-names=phi;
-
-; ------------------------------------------------------------------------------------------------
-; parameter for 2D_advection
-; variable names, note: number of names should be equal to number of datafields
-names=phi;
-
-; ------------------------------------------------------------------------------------------------
-; parameter for [2D/3D]_navier_stokes
-
-; adiabatic coefficient
-gamma_=1.4;
-
-; specific gas constant
-Rs=307.9430;
-
-; prandtl number
-Pr=0.71;
-
-; dynamic viscosity
-mu0=1e-2;
-
-; dissipation, 1=on, ...=off
-dissipation=1;
-
-; variable names, note: number of names should be equal to number of datafields
-names_ns=rho Ux Uy p;
+names=ux uy p;
 
 ; ------------------------------------------------------------------------------------------------
 ; parameter for [2D/3D]_acm
 
 ; variable names, note: number of names should be equal to number of datafields
-names_acm=Ux Uy Uz p;
+names_acm=ux uy p;
 
 ; speed of sound for acm
 c_0=50.0;
 
-; inverse of Re
-nu=0.0015;
-
-
 gamma_p=1.0;
-
 ; want to add a forcing term?
 forcing=1;
 
-; ------------------------------------------------------------------------------------------------
-; domain size
-Lx=1.0;10.0;
-Ly=1.0;10.0;
-Lz=1.0;10.0;
 
 ; ------------------------------------------------------------------------------------------------
 ; initial field (set additional parameters in according file in INI folder)
 ; [gauss_blob | vorticity_filaments | richtmyer_meshkov | shear_layer | ns_pressure_blob | read_from_files]
-initial_cond=vorticity_filaments;
+initial_cond=constant_acm;
 
 ; width of initial field (depends on Lx, Ly) or parameter for geometry for VPM (e.g. radius of a cylinder)
-inicond_width=1e-2;(for 2D Gauss blob, shear layer), 20.0_rk (for inicond sphere)
+inicond_width=0.5;(for 2D Gauss blob, shear layer), 20.0_rk (for inicond sphere)
 
 ; input files that contain treecode, time, iteration, number of blocks and initial field
 input_files=phi_000000000000.h5;
-; ################################################################################################
+
 [Discretization]
 ; order of derivative [ FD_2nd_central | FD_4th_central_optimized ]
-order_discretization=FD_4th_central_optimized ;
+order_discretization=FD_4th_central_optimized;
 
 ; order of refinement predictor [ multiresolution_4th | multiresolution_2nd ]
 order_predictor=multiresolution_4th;
@@ -173,27 +157,29 @@ filter_freq=10;
 ; bogey shock detector threshold
 r_th = 5e-3;
 
-; ################################################################################################
+
 [VPM]
-
-; flag for penalization
+; Volume penalization method to take obstacles into account without adapting the
+; grid. Penalization is an equation-dependent addon. It can not be used with all
+; RHS, if the RHS does not support it.
+; flag for penalization (0/1)
 penalization=1;
-
-; smooth mask for penalization term
+; smooth mask for penalization term [0,1]. If the obstacle moves, this flag should
+; be set, and in static cases as well. hard masks with only 0 and 1 are deprecated but
+; included for completeness.
 smooth_mask=1;
-
-; penalization factor
-eps_penal=0.0001;
-
+; penalization factor. Can be seen as porosity, so smaller values = harder walls
+; Note for explicit time integration, dt < C_eta
+C_eta=1e-3;
 ; geometry
 geometry=cylinder;
 
-; ################################################################################################
+
 [MPI]
 ; method for data exchange [ RMA_lock_unlock_get | RMA_lock_unlock_put | Non_blocking_Isend_Irecv ]
 mpi_data_exchange=Non_blocking_Isend_Irecv ;
 
-; ################################################################################################
+
 [Debug]
 ; 1 ... debuging for time measurements and testcases is active,
 debug=1;
@@ -202,4 +188,5 @@ debug=1;
 test_time_stepper=0;
 test_spatial=0;
 test_wavelet_comp=0;
+test_ghost_nodes_synch=1;
 test_treecode=0;
