move physics module init to subroutine // commenting

--- a/PARAMS_template.ini
+++ b/PARAMS_template.ini
@@ -1,4 +1,9 @@
+; WABBIT parameter file template.
+; if you add new parameters, add them here.
+; note values have to be declared "value=0;", with equal sign (=) and semicolon (;)
+
 [Dimensionality]
+; 2D or 3D problem?
 dim=2;
 
 
@@ -26,15 +31,20 @@ block_dist=sfc_hilbert;
 ; at coarse blocks with data from fine blocks [ 1 | ... ]
 non_uniform_mesh_correction=1;
 
+
 [DomainSize]
+; size of computational domain. Important for both wabbit and the physics modules
 Lx=4;
 Ly=4;
 Lz=4;
 
 
 [Saving]
-field_names=ux uy p vor mask;
+; TODO: maybe this section is clumsy and should be revised.
+; how many fields are you going to save?
 N_fields_saved=5;
+; how are the fields labeled?
+field_names=ux uy p vor mask;
 
 
 [ACM-new]
@@ -46,6 +56,7 @@ discretization=FD_4th_central_optimized;
 inicond=meanflow;
 x_cntr=2 2 0;
 R_cyl=0.5;
+
 
 [ConvectionDiffusion]
 ; how many scalar fields do you want to solve?
@@ -64,10 +75,8 @@ blob_width=0.1;
 time_max=1;
 ; number of time steps performed. if not set, default value is very large
 nt=;
-
 ; CFL criterium
 CFL=1.0;
-
 ; write method (write with fixed frequency or time ) [ fixed_freq | fixed_time ]
 write_method=fixed_time;
 ; write frequency for output, choose very large number for disabling output on disk
@@ -114,20 +123,6 @@ nu=1e-4; 1e-2;
 names=ux uy p;
 
 ; ------------------------------------------------------------------------------------------------
-; parameter for [2D/3D]_acm
-
-; variable names, note: number of names should be equal to number of datafields
-names_acm=ux uy p;
-
-; speed of sound for acm
-c_0=50.0;
-
-gamma_p=1.0;
-; want to add a forcing term?
-forcing=1;
-
-
-; ------------------------------------------------------------------------------------------------
 ; initial field (set additional parameters in according file in INI folder)
 ; [gauss_blob | vorticity_filaments | richtmyer_meshkov | shear_layer | ns_pressure_blob | read_from_files]
 initial_cond=constant_acm;
@@ -138,22 +133,18 @@ inicond_width=0.5;(for 2D Gauss blob, shear layer), 20.0_rk (for inicond sphere)
 ; input files that contain treecode, time, iteration, number of blocks and initial field
 input_files=phi_000000000000.h5;
 
-[Discretization]
-; order of derivative [ FD_2nd_central | FD_4th_central_optimized ]
-order_discretization=FD_4th_central_optimized;
 
+[Discretization]
+; order of derivatives [ FD_2nd_central | FD_4th_central_optimized ]
+order_discretization=FD_4th_central_optimized;
 ; order of refinement predictor [ multiresolution_4th | multiresolution_2nd ]
 order_predictor=multiresolution_4th;
-
 ; boundary condition [ periodic ]
 boundary_cond=periodic;
-
 ; filter type [no_filter | explicit_5pt | explicit_7pt | explicit_9pt | explicit_11pt | wavelet | bogey_shock]
 filter_type=no_filter;
-
 ; filter frequency (note: set to very high value to dissable filtering
 filter_freq=10;
-
 ; bogey shock detector threshold
 r_th = 5e-3;
 
@@ -183,7 +174,6 @@ mpi_data_exchange=Non_blocking_Isend_Irecv ;
 [Debug]
 ; 1 ... debuging for time measurements and testcases is active,
 debug=1;
-
 ; unit tests
 test_time_stepper=0;
 test_spatial=0;
