create new convection-diffusion module work in progress

--- a/PARAMS_template.ini
+++ b/PARAMS_template.ini
@@ -13,11 +13,11 @@ number_block_nodes=17;129;17;33;
 ; ghost nodes for each block
 number_ghost_nodes=4;
 ; number of datafields in heavy data array
-number_data_fields=3;
+number_data_fields=1;
 ; threshold value for thresholding wavelet coefficients
-eps=1e-2;1e-4;
+eps=1e-3;1e-4;
 ; treelevel bounds
-max_treelevel=4;
+max_treelevel=6;
 min_treelevel=1;
 ; switch for mesh adaption, 1=on, ...=off
 adapt_mesh=1;
@@ -34,17 +34,17 @@ non_uniform_mesh_correction=1;
 
 [DomainSize]
 ; size of computational domain. Important for both wabbit and the physics modules
-Lx=4;
-Ly=4;
-Lz=4;
+Lx=1;
+Ly=1;
+Lz=0;
 
 
 [Saving]
 ; TODO: maybe this section is clumsy and should be revised.
 ; how many fields are you going to save?
-N_fields_saved=5;
+N_fields_saved=3;
 ; how are the fields labeled?
-field_names=ux uy p vor mask;
+field_names=phi ux uy;
 
 
 [ACM-new]
@@ -61,28 +61,37 @@ R_cyl=0.5;
 [ConvectionDiffusion]
 ; how many scalar fields do you want to solve?
 N_scalars=1;
-; note you need to specify one value per scalar field:
-nu=1.0e-3;
-u0x=1.0;
-u0y=0.0;
-u0z=0.0;
+; note you need to specify one value per scalar field for ALL the below parameters
+; if nu<1.0e-10 (or 0.0), diffusion is disabled.
+nu=0.0e-6;
+; initial condition for the scalar(s)
 inicond=blob;
-blob_width=0.1;
+blob_width=0.051;
+; position of blob
+x0=0.5;
+y0=0.75;
+z0=0;
+; velocity field for transportation, [swirl,constant]
+velocity=swirl;
+; if constant velocity, these are the values
+u0x=1.0;
+u0y=1.0;
+u0z=0.0;
 
 
 [Time]
 ; final time to reach in simulation
-time_max=1;
+time_max=3;
 ; number of time steps performed. if not set, default value is very large
 nt=;
 ; CFL criterium
-CFL=1.0;
+CFL=1.5;
 ; write method (write with fixed frequency or time ) [ fixed_freq | fixed_time ]
 write_method=fixed_time;
 ; write frequency for output, choose very large number for disabling output on disk
 write_freq=50;
 ; write time for output
-write_time=0.01;
+write_time=0.10;
 ; method to calculate time step [ fixed | CFL_cond | lvl_fixed ]
 time_step_calc=CFL_cond;
 ; fixed time step
@@ -109,7 +118,7 @@ dt=0.000001;
 ; 3D_navier_stokes -> variables: rho, ux, uy, uz
 ;                  -> parameter: Rs, Cv, Cp, Pr, mu0
 ; 2D_advection     -> scalar equation, no parameter needed
-physics_type=ACM-new;
+physics_type=ConvDiff-new;
 
 ; ------------------------------------------------------------------------------------------------
 ; parameter for [2D/3D]_convection_diffusion
