--- a/PARAMS_template.ini
+++ b/PARAMS_template.ini
@@ -94,8 +94,12 @@ write_freq=50;
 write_time=0.10;
 ; method to calculate time step [ fixed | CFL_cond | lvl_fixed ]
 time_step_calc=CFL_cond;
-; fixed time step
-dt=0.000001;
+; fixed time step. if greater 0, then the time step is fixed no matter what.
+; default is 0.0, so not used.
+dt_fixed=0.0;
+; largest time step, if you want to set one. dt is always smaller than that, if the
+; value is greater 0. default is 0.0, so not used.
+dt_max=0.0;
 
 ; butcher_tableau
 ; use your butcher_tableau for the Runge Kutta time step function
