rename init routines // add refinement parameter for inicond // iteration counter in inicond (inigrid) generation

--- a/PARAMS_template.ini
+++ b/PARAMS_template.ini
@@ -21,6 +21,12 @@ max_treelevel=6;
 min_treelevel=1;
 ; switch for mesh adaption, 1=on, ...=off
 adapt_mesh=1;
+; adaptive initial conditon? i.e. create grid to respect error bounds
+; default is same value as adapt_mesh
+adapt_inicond=1;
+; in some situations, it is necessary to create the intial grid, and then refine it for a couple of times.
+; for example if one does non-adaptive non-equidistant spatial convergence tests. default is 0.
+inicond_refinements=0;
 ; block distribution for balancing (also used for start distribution)
 ; [equal | sfc_z | sfc_hilbert]
 ; equal -> simple uniformly distribution
