write cpu-distribution to file as well // cosmetics

--- a/PARAMS_template.ini
+++ b/PARAMS_template.ini
@@ -12,7 +12,8 @@ dim=2;
 number_block_nodes=17;129;17;33;
 ; ghost nodes for each block
 number_ghost_nodes=4;
-; number of datafields in heavy data array
+; number of equations / components of state vector. Note you have to properly
+; adjust this value for the physics module that you use.
 number_data_fields=1;
 ; threshold value for thresholding wavelet coefficients
 eps=1e-3;1e-4;
@@ -54,32 +55,36 @@ field_names=phi ux uy;
 
 
 [ACM-new]
+; speed of sound
 c_0=50.0;
+; viscosity
 nu=1e-2;
+; damping term for pressure, see [Ohwada, Asinari, JCP2010]
 gamma_p=1;
+; use mean flow forcing
 forcing=1;
-discretization=FD_4th_central_optimized;
+; initial condition
 inicond=meanflow;
-x_cntr=2 2 0;
-R_cyl=0.5;
+
 
 
 [ConvectionDiffusion]
-; how many scalar fields do you want to solve?
+; how many scalar fields do you want to solve? should be the same as number_data_fields
+; above.
 N_scalars=1;
 ; note you need to specify one value per scalar field for ALL the below parameters
-; if nu<1.0e-10 (or 0.0), diffusion is disabled.
+; viscosity. if nu<1.0e-10 (or 0.0), diffusion is disabled.
 nu=0.0e-6;
 ; initial condition for the scalar(s)
 inicond=blob;
-blob_width=0.051;
+blob_width=0.01;
 ; position of blob
 x0=0.5;
 y0=0.75;
 z0=0;
 ; velocity field for transportation, [swirl,constant]
 velocity=swirl;
-; if constant velocity, these are the values
+; if constant velocity, these are the values (one per scalar)
 u0x=1.0;
 u0y=1.0;
 u0z=0.0;
@@ -118,37 +123,13 @@ dt_max=0.0;
 
 
 [Physics]
-; type of RHS
-; note: reading of other physics parameter depends on RHS init subroutine
-; if parameter is not given: default value will be 0 or 1
-; 2D_convection_diffusion -> scalar equation, need: u0, nu
-; 2D_navier_stokes -> variables: rho, ux, uy
-;                  -> parameter: Rs, Cv, Cp, Pr, mu0
-; 3D_convection_diffusion -> scalar equation, need: u0, nu
-; 3D_navier_stokes -> variables: rho, ux, uy, uz
-;                  -> parameter: Rs, Cv, Cp, Pr, mu0
-; 2D_advection     -> scalar equation, no parameter needed
+; what physics module is used?
+; [ACM-new, ConvDiff-new]
 physics_type=ConvDiff-new;
-
-; ------------------------------------------------------------------------------------------------
-; parameter for [2D/3D]_convection_diffusion
-; convection velocity, can be different for each data field (first two values correspond to data field 1, ...)
-u0=1.0 0.0; -1.0 0.0;
-
-; diffusion coefficient, can be different for each data field (first value correspond to data field 1, ...)
-nu=1e-4; 1e-2;
-
-; variable names, note: number of names should be equal to number of datafields
-names=ux uy p;
-
-; ------------------------------------------------------------------------------------------------
-; initial field (set additional parameters in according file in INI folder)
-; [gauss_blob | vorticity_filaments | richtmyer_meshkov | shear_layer | ns_pressure_blob | read_from_files]
-initial_cond=constant_acm;
-
-; width of initial field (depends on Lx, Ly) or parameter for geometry for VPM (e.g. radius of a cylinder)
-inicond_width=0.5;(for 2D Gauss blob, shear layer), 20.0_rk (for inicond sphere)
-
+; initial condition can be set by the physics module or read from file. in the former
+; case details are given in the corrsponding subsection for each physics module.
+; [ physics-module | read_from_files]
+initial_cond=physics-module;
 ; input files that contain treecode, time, iteration, number of blocks and initial field
 input_files=phi_000000000000.h5;
 
@@ -183,6 +164,10 @@ smooth_mask=1;
 C_eta=1e-3;
 ; geometry
 geometry=cylinder;
+; center coordinate for cylinder
+x_cntr=2 2 0;
+; radius of cylinder
+R_cyl=0.5;
 
 
 [MPI]
