some add to previous commit

--- a/PARAMS_template.ini
+++ b/PARAMS_template.ini
@@ -14,7 +14,7 @@ number_block_nodes=17;129;17;33;
 number_ghost_nodes=4;
 ; number of equations / components of state vector. Note you have to properly
 ; adjust this value for the physics module that you use.
-number_data_fields=1;
+number_data_fields=4;
 ; threshold value for thresholding wavelet coefficients
 eps=1e-3;1e-4;
 ; treelevel bounds
@@ -49,10 +49,9 @@ Lz=0;
 [Saving]
 ; TODO: maybe this section is clumsy and should be revised.
 ; how many fields are you going to save?
-N_fields_saved=3;
+N_fields_saved=4;
 ; how are the fields labeled?
-field_names=phi ux uy;
-
+field_names=rho Ux Uy p;
 
 [ACM-new]
 ; speed of sound
@@ -98,9 +97,9 @@ nt=;
 ; CFL criterium
 CFL=1.5;
 ; write method (write with fixed frequency or time ) [ fixed_freq | fixed_time ]
-write_method=fixed_time;
+write_method=fixed_freq;
 ; write frequency for output, choose very large number for disabling output on disk
-write_freq=50;
+write_freq=2;
 ; write time for output
 write_time=0.10;
 ; method to calculate time step [ fixed | CFL_cond | lvl_fixed ]
@@ -124,15 +123,43 @@ dt_max=0.0;
 
 [Physics]
 ; what physics module is used?
-; [ACM-new, ConvDiff-new]
-physics_type=ConvDiff-new;
+; [ACM-new, ConvDiff-new, navier_stokes]
+physics_type=navier_stokes;
 ; initial condition can be set by the physics module or read from file. in the former
 ; case details are given in the corrsponding subsection for each physics module.
 ; [ physics-module | read_from_files]
 initial_cond=physics-module;
 ; input files that contain treecode, time, iteration, number of blocks and initial field
 input_files=phi_000000000000.h5;
+; sponge (yes=1, no=0)
+sponge_layer=1;
+; sponge parameter
+C_sp=100;
 
+
+[Navier_Stokes]
+; adiabatic coef
+
+; adiabatic coefficient
+gamma_=1.4;
+
+; specific gas constant
+Rs=307.9430;
+
+; prandtl number
+Pr=0.71;
+
+; dynamic viscosity
+mu0=1e-2;
+
+; dissipation, 1=on, ...=off
+dissipation=1;
+
+inicond=pressure_blob;
+
+inicond_width=0.01;
+
+; penalization 
 
 [Discretization]
 ; order of derivatives [ FD_2nd_central | FD_4th_central_optimized ]
@@ -165,7 +192,7 @@ C_eta=1e-3;
 ; geometry
 geometry=cylinder;
 ; center coordinate for cylinder
-x_cntr=2 2 0;
+x_cntr=0.5 0.5 0;
 ; radius of cylinder
 R_cyl=0.5;
 
