--- a/PARAMS_template.ini
+++ b/PARAMS_template.ini
@@ -93,7 +93,7 @@ u0z=0.0;
 ; final time to reach in simulation
 time_max=3;
 ; number of time steps performed. if not set, default value is very large
-nt=;
+nt=300;
 ; CFL criterium
 CFL=1.5;
 ; write method (write with fixed frequency or time ) [ fixed_freq | fixed_time ]
@@ -128,13 +128,13 @@ physics_type=navier_stokes;
 ; initial condition can be set by the physics module or read from file. in the former
 ; case details are given in the corrsponding subsection for each physics module.
 ; [ physics-module | read_from_files]
-initial_cond=physics-module;
+initial_cond=read_from_files;
 ; input files that contain treecode, time, iteration, number of blocks and initial field
-input_files=phi_000000000000.h5;
+input_files=rho_000000000141.h5 Ux_000000000141.h5 Uy_000000000141.h5 p_000000000141.h5;
 ; sponge (yes=1, no=0)
 sponge_layer=1;
 ; sponge parameter
-C_sp=100;
+C_sp=0.001;
 
 
 [Navier_Stokes]
@@ -144,7 +144,7 @@ C_sp=100;
 gamma_=1.4;
 
 ; specific gas constant
-Rs=307.9430;
+Rs=287.05         ;for air   
 
 ; prandtl number
 Pr=0.71;
