added new fast rhs of navier stokes: debugging still needed!

--- a/PARAMS_template.ini
+++ b/PARAMS_template.ini
@@ -14,7 +14,7 @@ number_block_nodes=17;129;17;33;
 number_ghost_nodes=4;
 ; number of equations / components of state vector. Note you have to properly
 ; adjust this value for the physics module that you use.
-number_data_fields=4;
+number_data_fields=3;
 ; threshold value for thresholding wavelet coefficients
 eps=1e-3;1e-4;
 ; treelevel bounds
@@ -41,17 +41,17 @@ non_uniform_mesh_correction=1;
 
 [DomainSize]
 ; size of computational domain. Important for both wabbit and the physics modules
-Lx=1;
-Ly=1;
+Lx=10;
+Ly=10;
 Lz=0;
 
 
 [Saving]
 ; TODO: maybe this section is clumsy and should be revised.
 ; how many fields are you going to save?
-N_fields_saved=4;
+N_fields_saved=5;
 ; how are the fields labeled?
-field_names=rho Ux Uy p;
+field_names=Ux Uy p vort mask;
 
 [ACM-new]
 ; speed of sound
@@ -124,11 +124,11 @@ dt_max=0.0;
 [Physics]
 ; what physics module is used?
 ; [ACM-new, ConvDiff-new, navier_stokes]
-physics_type=navier_stokes;
+physics_type=ACM-new;
 ; initial condition can be set by the physics module or read from file. in the former
 ; case details are given in the corrsponding subsection for each physics module.
 ; [ physics-module | read_from_files]
-initial_cond=read_from_files;
+initial_cond=physics-module;
 ; input files that contain treecode, time, iteration, number of blocks and initial field
 input_files=rho_000000000141.h5 Ux_000000000141.h5 Uy_000000000141.h5 p_000000000141.h5;
 ; sponge (yes=1, no=0)
@@ -192,7 +192,7 @@ C_eta=1e-3;
 ; geometry
 geometry=cylinder;
 ; center coordinate for cylinder
-x_cntr=0.5 0.5 0;
+x_cntr=5 5 0;
 ; radius of cylinder
 R_cyl=0.5;
 
