add statistics part // modify ACM mean flow forcing (allow setting fixed meanflow) modifying ACM meanflow required changing inten() statement for state vector to (inout) at some places the modified mean flow is retained only for the very first RHS call (because the time stepper ignores changes in the state vector usually)

--- a/PARAMS_template.ini
+++ b/PARAMS_template.ini
@@ -53,6 +53,14 @@ N_fields_saved=5;
 ; how are the fields labeled?
 field_names=Ux Uy p vort mask;
 
+
+[Statistics]
+; save every nsave time steps (leave empty to disable)
+nsave_stats=10;
+; and every tsave physical time units (leave empty to disable)
+tsave_stats=0.20;
+
+
 [ACM-new]
 ; speed of sound
 c_0=50.0;
@@ -60,8 +68,13 @@ c_0=50.0;
 nu=1e-2;
 ; damping term for pressure, see [Ohwada, Asinari, JCP2010]
 gamma_p=1;
-; use mean flow forcing
+; use mean flow forcing or not
 forcing=1;
+; what method to use for forcing? available: accelerate / none / fixed
+; specifiy at least Dim entries for each component
+forcing_type=accelerate fixed none;
+; if mean flow forcing is used, this is the values for the mean velocities:
+u_mean_set=0.0 0.0 0.0;
 ; initial condition
 inicond=meanflow;
 
@@ -138,28 +151,19 @@ C_sp=0.001;
 
 
 [Navier_Stokes]
-; adiabatic coef
-
 ; adiabatic coefficient
 gamma_=1.4;
-
 ; specific gas constant
-Rs=287.05         ;for air   
-
+Rs=287.05         ;for air
 ; prandtl number
 Pr=0.71;
-
 ; dynamic viscosity
 mu0=1e-2;
-
 ; dissipation, 1=on, ...=off
 dissipation=1;
-
 inicond=pressure_blob;
-
 inicond_width=0.01;
 
-; penalization 
 
 [Discretization]
 ; order of derivatives [ FD_2nd_central | FD_4th_central_optimized ]
