--- a/PARAMS_template.ini
+++ b/PARAMS_template.ini
@@ -208,4 +208,6 @@ debug=1;
 test_time_stepper=0;
 test_spatial=0;
 test_wavelet_comp=0;
+test_ghost_nodes_synch=0;
 test_treecode=0;
+test_redundant_nodes=0;
