cleaned up ns_physics

--- a/PARAMS_template.ini
+++ b/PARAMS_template.ini
@@ -49,9 +49,9 @@ Lz=0;
 [Saving]
 ; TODO: maybe this section is clumsy and should be revised.
 ; how many fields are you going to save?
-N_fields_saved=5;
+N_fields_saved=6;
 ; how are the fields labeled?
-field_names=Ux Uy p vort mask;
+field_names=rho Ux Uy p vort mask;
 
 
 [Statistics]
@@ -160,10 +160,20 @@ Pr=0.71;
 ; dynamic viscosity
 mu0=1e-2;
 ; dissipation, 1=on, ...=off
-dissipation=1;
-inicond=pressure_blob;
+dissipation=1;            ;
+; initial conditions:
+; 1.)mask:
+;	 sets initial conditions to 0 at the mask domain
+; 2.)zeros:
+;    sets initial velocitys to 0 regardles of initial_velocity
+; 3.)pressure_blob  
+; 	 pressure blob with diameter inicond_width   	  
+inicond=mask;zeros;pressure_blob;
 inicond_width=0.01;
-
+initial_preasure=101330.0;
+initial_velocity=50.0 0.0 0;
+initial_temperature=200;
+initial_density=1.645
 
 [Discretization]
 ; order of derivatives [ FD_2nd_central | FD_4th_central_optimized ]
