--- a/TESTING/navier_stokes/pressure_blob/ns_test.ini
+++ b/TESTING/navier_stokes/pressure_blob/ns_test.ini
@@ -49,9 +49,9 @@ Lz=0;
 [Saving]
 ; TODO: maybe this section is clumsy and should be revised.
 ; how many fields are you going to save?
-N_fields_saved=4;
+N_fields_saved=6;
 ; how are the fields labeled?
-field_names=rho Ux Uy p;
+field_names=rho Ux Uy p vort mask;
 
 [Time]
 ; final time to reach in simulation
@@ -114,6 +114,10 @@ mu0=1e-2;
 dissipation=1;
 inicond=pressure_blob;
 inicond_width=0.01;
+initial_preasure=101330.0;
+initial_velocity=0.0 0.0 0;
+initial_temperature=200;
+initial_density=1.645
 
 [Discretization]
 ; order of derivatives [ FD_2nd_central | FD_4th_central_optimized ]
