hope its working now, put 5 euro in the swear jar for me too

--- a/PARAMS_template.ini
+++ b/PARAMS_template.ini
@@ -215,6 +215,19 @@ R_cyl=0.5;
 ; method for data exchange [ RMA_lock_unlock_get | RMA_lock_unlock_put | Non_blocking_Isend_Irecv ]
 mpi_data_exchange=Non_blocking_Isend_Irecv ;
 
+[BRIDGE]
+; type 1 if a bridge shell be created and 0 if not
+bridge=0 ;
+; Usage of a common MPI_comm_world  (1,yes,true,T=true / 0,no,false,F=false)
+; Only needed if there is a bridge
+bridgeCommonMPI=0;
+
+; Consideration of the particles side as master  (1,yes,true,T=true / 0,no,false,F=false)
+; Only needed if there is a bridge and no common world 
+bridgeFluidMaster=1;
+; Command to use to launch the fluid program
+; Only needed if bridge connection
+particleCommand=pig;
 
 [Debug]
 ; 1 ... debuging for time measurements and testcases is active,
