ACM: sponge term // mean pressure removal // conditionsfor saving // postprocessing: mean

--- a/TESTING/acm/acm_cyl/acm_test_zcurve.ini
+++ b/TESTING/acm/acm_cyl/acm_test_zcurve.ini
@@ -53,6 +53,7 @@ N_fields_saved=5;
 ; how are the fields labeled?
 field_names=Ux Uy p vor mask;
 
+
 [ACM-new]
 ; speed of sound
 c_0=50.0;
@@ -60,11 +61,25 @@ c_0=50.0;
 nu=1e-2;
 ; damping term for pressure, see [Ohwada, Asinari, JCP2010]
 gamma_p=1;
-; use mean flow forcing
+; use mean flow forcing or not
 forcing=1;
+; what method to use for forcing? available: accelerate / none / fixed
+; specifiy at least Dim entries for each component
+forcing_type=accelerate none none;
+; if mean flow forcing is used, this is the values for the mean velocities:
+u_mean_set=1.0 0.0 0.0;
 ; initial condition
 inicond=meanflow;
+; the mean pressure has no meaning in incompressible fluids, but sometimes it can
+; be nice to ensure the mean is zero, e.g., for comparison wit other codes. if set to true
+; wabbit removes the mean pressure at every time step.
+p_mean_zero=no;
 
+[Sponge]
+; sponge term, used in ACM module to mimick outflow conditions for pressure waves
+use_sponge=0;
+L_sponge=0.1;
+C_sponge=1.0e-2;
 
 [Time]
 ; final time to reach in simulation
