--- a/PARAMS_template.ini
+++ b/PARAMS_template.ini
@@ -19,7 +19,7 @@ number_data_fields=4;2;
 eps=1e-2;1e-4;
 
 ; treelevel bounds
-max_treelevel=5;
+max_treelevel=8;
 min_treelevel=1;
 
 ; switch for mesh adaption, 1=on, ...=off
@@ -30,7 +30,7 @@ adapt_mesh=1;
 ; equal -> simple uniformly distribution
 ; sfc_z  -> space filling curve -> z-curve
 ; sfc_hilbert -> hilbert space filling curve
-block_dist=equal;
+block_dist=sfc_hilbert;
 
 ; non uniform mesh correction: if 1 then wabbit synchronize redundant nodes
 ; at coarse blocks with data from fine blocks [ 1 | ... ]
@@ -208,6 +208,6 @@ debug=1;
 test_time_stepper=0;
 test_spatial=0;
 test_wavelet_comp=0;
-test_ghost_nodes_synch=0;
+test_ghost_nodes_synch=1;
 test_treecode=0;
 test_redundant_nodes=0;
