add shear layer inicond and new bogey filter

--- a/PARAMS_template.ini
+++ b/PARAMS_template.ini
@@ -200,6 +200,10 @@ filter_type=no_filter;
 filter_freq=10;
 ; bogey shock detector threshold
 r_th = 5e-3;
+; bogey shock switch [tanh,abs]
+switch=tanh;
+; bogey detection method [divU,p]
+detector_method=divU
 
 
 [VPM]
